<resources>
    <string name="app_name">MaterialMensa</string>
    <string name="downvote">Downvote</string>
    <string name="empty_string" translatable="false"/>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="share">Share</string>
    <string name="share_chooser_title">Share your menu via</string>
    <string name="share_string_prefix">Let\'s dine %1$s. They have:\u0020</string>
    <string name="share_string_suffix">\n\nShared via MaterialMensa: %1$s</string>
    <string name="upvote">Upvote</string>
    <string name="restaurant_bistro_hotspot" translatable="false">Bistro Hotspot</string>
    <string name="restaurant_cafete" translatable="false">Caféte</string>
    <string name="restaurant_grill_cafe" translatable="false">Grill | Café</string>
    <string name="restaurant_mensa_academica_paderborn" translatable="false">Mensa Academica</string>
    <string name="restaurant_mensa_atrium" translatable="false">Mensa Atrium</string>
    <string name="restaurant_mensa_basilica" translatable="false">Mensa Basilica</string>
    <string name="restaurant_mensa_forum_paderborn" translatable="false">Mensa Forum</string>
    <string name="restaurant_mensula" translatable="false">Mensula</string>
    <string name="restaurant_one_way_snack" translatable="false">One Way Snack</string>
    <string name="error_all_meals_filtered">Nothing that fits your lifestyle. Sorry.</string>
    <string name="error_offline">You\'re Offline. Sorry.</string>
    <string name="error_restaurant_closed">The restaurant is closed today. Sorry.</string>
    <string name="activity_about_attribution_api" translatable="false">API</string>
    <string name="activity_about_attribution_emoji" translatable="false">Emoji</string>
    <string name="activity_about_attribution_icons" translatable="false">Icons</string>
    <string name="activity_about_attribution_libraries" translatable="false">Libraries</string>
    <string name="activity_about_email_subject" translatable="false">[MaterialMensa] Ahoi!</string>
    <string name="activity_about_general_git_hub" translatable="false">GitHub</string>
    <string name="activity_about_general_mail_me" translatable="false">Mail Me</string>
    <string name="activity_about_general_rate" translatable="false">Rate</string>
    <string name="activity_about_general_wish_list" translatable="false">Wish List</string>
    <string name="activity_about_libraries_title" translatable="false">Libraries</string>
    <string name="activity_about_title">About</string>
    <string name="activity_about_version" translatable="false">Version %1$s (%2$s)</string>
    <string name="activity_details_image_description">Meal Picture</string>
    <string name="activity_details_information">Please contact cafeteria staff for detailed information about additives and allergens. Don\'t rely on this information being correct if you have any allergies or want to avoid any additives.</string>
    <string name="activity_details_title" translatable="false">Details</string>
    <string name="drawer_main_header_lifestyle_placeholder" translatable="false">Vegetarian</string>
    <string name="drawer_main_header_role_image_description">Role</string>
    <string name="drawer_main_header_role_placeholder" translatable="false">Student</string>
    <string name="drawer_main_restaurant_status_closed">Restaurant closed at the moment.</string>
    <string name="drawer_main_restaurant_status_closing_time">Restaurant closes in %1$s:%2$sh.</string>
    <string name="drawer_main_restaurant_status_opening_time">Restaurant opens at %1$s:%2$s%3$s.</string>
    <string name="drawer_main_restaurant_status_opening_time_suffix"/>
    <string name="item_meal_description" translatable="false">%1$s%2$s</string>
    <string name="item_meal_description_badge_lactose_free_e">Lactose-free\u0020</string>
    <string name="item_meal_description_badge_lactose_free_r">Lactose-free\u0020</string>
    <string name="item_meal_description_badge_lactose_free_s">Lactose-free\u0020</string>
    <string name="item_meal_description_badge_low_calorie_e">Low Calorie\u0020</string>
    <string name="item_meal_description_badge_low_calorie_r">Low Calorie\u0020</string>
    <string name="item_meal_description_badge_low_calorie_s">Low Calorie\u0020</string>
    <string name="item_meal_description_badge_non_fat_e">Low Fat\u0020</string>
    <string name="item_meal_description_badge_non_fat_r">Low Fat\u0020</string>
    <string name="item_meal_description_badge_non_fat_s">Low Fat\u0020</string>
    <string name="item_meal_description_badge_vegan_e">Vegan\u0020</string>
    <string name="item_meal_description_badge_vegan_r">Vegan\u0020</string>
    <string name="item_meal_description_badge_vegan_s">Vegan\u0020</string>
    <string name="item_meal_description_badge_vegetarian_e">Vegetarian\u0020</string>
    <string name="item_meal_description_badge_vegetarian_r">Vegetarian\u0020</string>
    <string name="item_meal_description_badge_vegetarian_s">Vegetarian\u0020</string>
    <string name="item_meal_description_badge_vital_food_e">Vital\u0020</string>
    <string name="item_meal_description_badge_vital_food_r">Vital\u0020</string>
    <string name="item_meal_description_badge_vital_food_s">Vital\u0020</string>
    <string name="item_meal_description_category_appetizer">Appetizer</string>
    <string name="item_meal_description_category_classic" translatable="false">Classic</string>
    <string name="item_meal_description_category_dessert" translatable="false">Dessert</string>
    <string name="item_meal_description_category_lahmacun" translatable="false">Lahmacun</string>
    <string name="item_meal_description_category_main_course">Main Course</string>
    <string name="item_meal_description_category_meal">Meal</string>
    <string name="item_meal_description_category_offer">Offer</string>
    <string name="item_meal_description_category_sandwich" translatable="false">Sandwich</string>
    <string name="item_meal_description_category_side_dish">Side Dish</string>
    <string name="item_meal_description_category_soup">Soup</string>
    <string name="item_meal_description_category_wrap" translatable="false">Wrap</string>
    <string name="item_meal_description_placeholder" translatable="false">Vegetarian Classic</string>
    <string name="item_meal_name_placeholder" translatable="false">Three variations of poultry with rucola salad and orange vinaigrette</string>
    <string name="item_meal_price_placeholder" translatable="false">0,90€/100gr</string>
    <string name="item_meal_price_string" translatable="false">%1$s€%2$s</string>
    <string name="item_meal_price_string_fixed" translatable="false"/>
    <string name="item_meal_price_string_weighted" translatable="false">/100gr</string>
    <string name="item_meal_social_positive_score" translatable="false">+ %1$s</string>
    <string name="item_meal_social_score_placeholder" translatable="false">-2140</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_preference_additives">Additives</string>
    <string name="activity_settings_preference_additives_summary">Who cares for nitrate salting mix amiright?</string>
    <string name="activity_settings_preference_allergens">Allergens</string>
    <string name="activity_settings_preference_allergens_summary">Select your personal kryptonite.</string>
    <string name="activity_settings_preference_category_allergens_additives">Allergens &amp; Additives</string>
    <string name="activity_settings_preference_category_general">General</string>
    <string name="activity_settings_preference_category_general_key" translatable="false">prefCategoryGeneral</string>
    <string name="activity_settings_preference_category_user_interface">User Interface</string>
    <string name="activity_settings_preferences_additives_key" translatable="false">prefAdditives</string>
    <string name="activity_settings_preferences_allergens_key" translatable="false">prefAllergens</string>
    <string name="activity_settings_preferences_default_restaurant">Default Restaurant</string>
    <string name="activity_settings_preferences_default_restaurant_default" translatable="false">0</string>
    <string name="activity_settings_preferences_default_restaurant_key" translatable="false">prefDefaultRestaurant</string>
    <string name="activity_settings_preferences_default_restaurant_summary">Can\'t think of a joke right now.</string>
    <string name="activity_settings_preferences_hide_days">Hide Days</string>
    <string name="activity_settings_preferences_hide_days_fridays">Fridays</string>
    <string name="activity_settings_preferences_hide_days_key" translatable="false">prefHideDays</string>
    <string name="activity_settings_preferences_hide_days_mondays">Mondays</string>
    <string name="activity_settings_preferences_hide_days_saturdays">Saturdays</string>
    <string name="activity_settings_preferences_hide_days_summary">Lazy Sundays.</string>
    <string name="activity_settings_preferences_hide_days_sundays">Sundays</string>
    <string name="activity_settings_preferences_hide_days_thursdays">Thursdays</string>
    <string name="activity_settings_preferences_hide_days_tuesday">Tuesdays</string>
    <string name="activity_settings_preferences_hide_days_wednesdays">Wednesdays</string>
    <string name="activity_settings_preferences_hide_filtered">Hide Filtered Meals</string>
    <string name="activity_settings_preferences_hide_filtered_default" translatable="false">true</string>
    <string name="activity_settings_preferences_hide_filtered_key" translatable="false">prefFilter</string>
    <string name="activity_settings_preferences_hide_filtered_summary">[Insert joke about object permanence here.]</string>
    <string name="activity_settings_preferences_images_in_main">Show Images in main view</string>
    <string name="activity_settings_preferences_images_in_main_default" translatable="false">true</string>
    <string name="activity_settings_preferences_images_in_main_key" translatable="false">prefImagesInMain</string>
    <string name="activity_settings_preferences_images_in_main_summary">I\'m more the visual type.</string>
    <string name="activity_settings_preferences_language">Language (Restart required)</string>
    <string name="activity_settings_preferences_language_de">German</string>
    <string name="activity_settings_preferences_language_default" translatable="false">not_set</string>
    <string name="activity_settings_preferences_language_en">English</string>
    <string name="activity_settings_preferences_language_key" translatable="false">prefLang</string>
    <string name="activity_settings_preferences_language_summary" translatable="false">Lost in Translation.</string>
    <string name="activity_settings_preferences_language_system">System Language</string>
    <string name="activity_settings_preferences_lifestyle" translatable="false">Lifestyle</string>
    <string name="activity_settings_preferences_lifestyle_default" translatable="false">not_set</string>
    <string name="activity_settings_preferences_lifestyle_key" translatable="false">prefLifestyle</string>
    <string name="activity_settings_preferences_lifestyle_level_five_vegan">Nothing that casts a shadow.</string>
    <string name="activity_settings_preferences_lifestyle_level_five_vegan_drawer">Level 5 Vegan</string>
    <string name="activity_settings_preferences_lifestyle_meat" translatable="false">Super Meat Girl</string>
    <string name="activity_settings_preferences_lifestyle_summary">Whats your lifestyle?</string>
    <string name="activity_settings_preferences_lifestyle_vegan" translatable="false">Vegan McGegan</string>
    <string name="activity_settings_preferences_lifestyle_vegetarian" translatable="false">Vegetarian Stallion</string>
    <string name="activity_settings_preferences_role">Role</string>
</resources>