<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_main_group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_main_drawer_0"
            android:checked="true"
            android:icon="@drawable/ic_calendar_black_1"
            android:title="@string/placeholder"/>

        <item
            android:id="@+id/menu_main_drawer_1"
            android:icon="@drawable/ic_calendar_black_2"
            android:title="@string/placeholder"/>

        <item
            android:id="@+id/menu_main_drawer_2"
            android:icon="@drawable/ic_calendar_black_3"
            android:title="@string/placeholder"/>

        <item
            android:id="@+id/menu_main_drawer_3"
            android:icon="@drawable/ic_calendar_black_4"
            android:title="@string/placeholder"/>

        <item
            android:id="@+id/menu_main_drawer_4"
            android:icon="@drawable/ic_calendar_black_5"
            android:title="@string/placeholder"/>

        <item
            android:id="@+id/menu_main_drawer_5"
            android:icon="@drawable/ic_calendar_black_6"
            android:title="@string/placeholder"/>

        <item
            android:id="@+id/menu_main_drawer_6"
            android:icon="@drawable/ic_calendar_black_7"
            android:title="@string/placeholder"/>
    </group>

    <group
        android:id="@+id/drawer_main_group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_main_drawer_settings"
            android:checkable="false"
            android:icon="@drawable/ic_settings_white"
            android:title="@string/activity_settings_title"/>
        <item
            android:id="@+id/menu_main_drawer_about"
            android:checkable="false"
            android:icon="@drawable/ic_info_white"
            android:title="@string/activity_about_title"/>
    </group>

</menu>