<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/activity_about_joust_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/activity_about_general_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/placeholder"
                android:src="@drawable/splash_logo"
                android:tint="@color/textPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBaseline="@+id/activity_about_general_icon"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/activity_about_general_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_about_general_git_hub"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_general_git_hub"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/activity_about_general_mail_me"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_general_mail_me"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/activity_about_general_rate"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_general_rate"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/activity_about_general_wish_list"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_general_wish_list"
                    android:textColor="@color/textPrimary"/>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/activity_about_separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/activity_about_joust_container"
            android:layout_marginBottom="@dimen/list_separator_vertical_margin"
            android:layout_marginEnd="@dimen/list_separator_horizontal_margin"
            android:layout_marginStart="@dimen/list_separator_horizontal_margin"
            android:layout_marginTop="@dimen/list_separator_vertical_margin"
            android:background="@color/materialGrey500"/>

        <RelativeLayout
            android:id="@+id/activity_about_attributions_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/activity_about_separator1">

            <ImageView
                android:id="@+id/activity_about_attributions_icon"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/placeholder"
                android:src="@drawable/ic_list_black"
                android:tint="@color/textPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBaseline="@+id/activity_about_attributions_icon"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="-10dp"
                android:layout_toEndOf="@+id/activity_about_attributions_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_about_attributions_api"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_attribution_api"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/activity_about_attributions_emoji"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_attribution_emoji"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/activity_about_attributions_icons"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_attribution_icons"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/activity_about_attributions_libraries"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:text="@string/activity_about_attribution_libraries"
                    android:textColor="@color/textPrimary"/>

            </LinearLayout>


        </RelativeLayout>

        <View
            android:id="@+id/activity_about_separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/activity_about_attributions_container"
            android:layout_marginBottom="@dimen/list_separator_vertical_margin"
            android:layout_marginEnd="@dimen/list_separator_horizontal_margin"
            android:layout_marginStart="@dimen/list_separator_horizontal_margin"
            android:layout_marginTop="@dimen/list_separator_vertical_margin"
            android:background="@color/materialGrey400"/>

        <TextView
            android:id="@+id/activity_about_version"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/activity_about_separator2"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/textPrimary"/>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>